# VI-2324

./: .gitignore  README.md
src/: CMakeLists.txt  MyImage.ppm  MyImage_ACES.ppm  MyImage_Original.ppm  MyImage_Rein.ppm  MyImage_Rein_2048.ppm  main.cpp
src/Camera/: perspective.cpp  perspective.hpp
src/Image/: ImagePPM.cpp  ImagePPM.hpp  image.hpp
src/Light/: AmbientLight.hpp  AreaLight.hpp  dummy.cpp  light.hpp
src/Primitive/: BB.hpp  primitive.hpp
src/Primitive/BRDF/: BRDF.hpp
src/Primitive/Geometry/: geometry.hpp  mesh.cpp  mesh.hpp  triangle.cpp  triangle.hpp
src/Renderer/: StandardRenderer.cpp  StandardRenderer.hpp
src/Scene/: scene.cpp
src/Shader/: AmbientShader.cpp  DistributedShader.cpp  PathTracerShader.cpp  WhittedShader.cpp
